// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    clearUserFavorites={[Function]}
    signOut={[Function]}
    user={
        Object {
            "id": 1,
            "name": "Bob",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="header__home-link"
          replace={false}
          to="/"
>
          <h1>
                    Movie Tracker
          </h1>
</Link>,
        <nav>
          <p
                    className="header__welcome-message"
          >
                    Welcome back 
                    Bob
          </p>
          <div
                    className="header__nav"
          >
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              exact={true}
                              to="/favorites"
                    >
                              Favorites
                    </NavLink>
                    <a
                              className="sign-out"
                              onClick={[Function]}
                    >
                              Sign Out
                    </a>
          </div>
</nav>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <h1>
            Movie Tracker
</h1>,
          "className": "header__home-link",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Movie Tracker",
          },
          "ref": null,
          "rendered": "Movie Tracker",
          "type": "h1",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="header__welcome-message"
>
              Welcome back 
              Bob
</p>,
            false,
            <div
              className="header__nav"
>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            exact={true}
                            to="/favorites"
              >
                            Favorites
              </NavLink>
              <a
                            className="sign-out"
                            onClick={[Function]}
              >
                            Sign Out
              </a>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Welcome back ",
                "Bob",
              ],
              "className": "header__welcome-message",
            },
            "ref": null,
            "rendered": Array [
              "Welcome back ",
              "Bob",
            ],
            "type": "p",
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  exact={true}
                  to="/favorites"
>
                  Favorites
</NavLink>,
                <a
                  className="sign-out"
                  onClick={[Function]}
>
                  Sign Out
</a>,
              ],
              "className": "header__nav",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Favorites",
                  "exact": true,
                  "to": "/favorites",
                },
                "ref": null,
                "rendered": "Favorites",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Sign Out",
                  "className": "sign-out",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Sign Out",
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "nav",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="header__home-link"
            replace={false}
            to="/"
>
            <h1>
                        Movie Tracker
            </h1>
</Link>,
          <nav>
            <p
                        className="header__welcome-message"
            >
                        Welcome back 
                        Bob
            </p>
            <div
                        className="header__nav"
            >
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    exact={true}
                                    to="/favorites"
                        >
                                    Favorites
                        </NavLink>
                        <a
                                    className="sign-out"
                                    onClick={[Function]}
                        >
                                    Sign Out
                        </a>
            </div>
</nav>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <h1>
              Movie Tracker
</h1>,
            "className": "header__home-link",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Movie Tracker",
            },
            "ref": null,
            "rendered": "Movie Tracker",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="header__welcome-message"
>
                Welcome back 
                Bob
</p>,
              false,
              <div
                className="header__nav"
>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                exact={true}
                                to="/favorites"
                >
                                Favorites
                </NavLink>
                <a
                                className="sign-out"
                                onClick={[Function]}
                >
                                Sign Out
                </a>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Welcome back ",
                  "Bob",
                ],
                "className": "header__welcome-message",
              },
              "ref": null,
              "rendered": Array [
                "Welcome back ",
                "Bob",
              ],
              "type": "p",
            },
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NavLink
                    activeClassName="active"
                    aria-current="page"
                    exact={true}
                    to="/favorites"
>
                    Favorites
</NavLink>,
                  <a
                    className="sign-out"
                    onClick={[Function]}
>
                    Sign Out
</a>,
                ],
                "className": "header__nav",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "activeClassName": "active",
                    "aria-current": "page",
                    "children": "Favorites",
                    "exact": true,
                    "to": "/favorites",
                  },
                  "ref": null,
                  "rendered": "Favorites",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Sign Out",
                    "className": "sign-out",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Sign Out",
                  "type": "a",
                },
              ],
              "type": "div",
            },
          ],
          "type": "nav",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`Header should match when logged out 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="header__home-link"
          replace={false}
          to="/"
>
          <h1>
                    Movie Tracker
          </h1>
</Link>,
        <nav>
          <div
                    className="header__nav"
          >
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              exact={true}
                              to="/login"
                    >
                              Sign In
                    </NavLink>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              exact={true}
                              to="/sign-up"
                    >
                              Sign Up
                    </NavLink>
          </div>
</nav>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <h1>
            Movie Tracker
</h1>,
          "className": "header__home-link",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Movie Tracker",
          },
          "ref": null,
          "rendered": "Movie Tracker",
          "type": "h1",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            <div
              className="header__nav"
>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            exact={true}
                            to="/login"
              >
                            Sign In
              </NavLink>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            exact={true}
                            to="/sign-up"
              >
                            Sign Up
              </NavLink>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  exact={true}
                  to="/login"
>
                  Sign In
</NavLink>,
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  exact={true}
                  to="/sign-up"
>
                  Sign Up
</NavLink>,
              ],
              "className": "header__nav",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Sign In",
                  "exact": true,
                  "to": "/login",
                },
                "ref": null,
                "rendered": "Sign In",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Sign Up",
                  "exact": true,
                  "to": "/sign-up",
                },
                "ref": null,
                "rendered": "Sign Up",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "nav",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="header__home-link"
            replace={false}
            to="/"
>
            <h1>
                        Movie Tracker
            </h1>
</Link>,
          <nav>
            <div
                        className="header__nav"
            >
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    exact={true}
                                    to="/login"
                        >
                                    Sign In
                        </NavLink>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    exact={true}
                                    to="/sign-up"
                        >
                                    Sign Up
                        </NavLink>
            </div>
</nav>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <h1>
              Movie Tracker
</h1>,
            "className": "header__home-link",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Movie Tracker",
            },
            "ref": null,
            "rendered": "Movie Tracker",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              <div
                className="header__nav"
>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                exact={true}
                                to="/login"
                >
                                Sign In
                </NavLink>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                exact={true}
                                to="/sign-up"
                >
                                Sign Up
                </NavLink>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NavLink
                    activeClassName="active"
                    aria-current="page"
                    exact={true}
                    to="/login"
>
                    Sign In
</NavLink>,
                  <NavLink
                    activeClassName="active"
                    aria-current="page"
                    exact={true}
                    to="/sign-up"
>
                    Sign Up
</NavLink>,
                ],
                "className": "header__nav",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "activeClassName": "active",
                    "aria-current": "page",
                    "children": "Sign In",
                    "exact": true,
                    "to": "/login",
                  },
                  "ref": null,
                  "rendered": "Sign In",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "activeClassName": "active",
                    "aria-current": "page",
                    "children": "Sign Up",
                    "exact": true,
                    "to": "/sign-up",
                  },
                  "ref": null,
                  "rendered": "Sign Up",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "nav",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
